Bug 619955. 'pointer-events' broken on SVG text. r=longsonr, a=roc.